--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.1.0
+    rev: v2.5.0
     hooks:
       - id: check-executables-have-shebangs
         stages: [commit,push]
@@ -20,21 +20,21 @@ repos:
       - id: trailing-whitespace
         stages: [commit,push]
   - repo: https://github.com/jorisroovers/gitlint
-    rev: v0.11.0
+    rev: v0.13.1
     hooks:
       - id: gitlint
         stages: [commit-msg]
   - repo: https://github.com/jumanjihouse/pre-commit-hooks
-    rev: 1.11.0
+    rev: 2.0.2
     hooks:
       - id: shfmt
         stages: [commit,push]
-  - repo: git://github.com/antonbabenko/pre-commit-terraform
-    rev: v1.11.0
+  - repo: https://github.com/antonbabenko/pre-commit-terraform
+    rev: v1.30.0
     hooks:
       - id: terraform_fmt
   - repo: https://github.com/Lucas-C/pre-commit-hooks-nodejs
-    rev: v1.1.0
+    rev: v1.1.1
     hooks:
       - id: dockerfile_lint
         stages: [commit,push]
